--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     const whatsappButton = document.getElementById('whatsapp-button');
     whatsappButton.addEventListener('click', function(e) {
       e.preventDefault();
-      window.location.href = 'https://wa.link/evbwes';
+      window.location.href = 'https://wa.link/8xfz3v';
     });
   </script>
   <!-- Código para inicializar el visor 360 (código existente) -->
@@ -732,7 +732,7 @@
       ]
     };
   
-    let currentFloor = 4;
+    let currentFloor = 1;
     const viewer = new Viewer({
       container: document.querySelector('#viewer360'),
       loadingImg: '../cusig2.gif',
