--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
   { nodeId: 'nodo2', position: {yaw: 2.58214450491435, pitch: -0.09558055423142475} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo2',
@@ -283,7 +283,7 @@
   { nodeId: 'nodo1', position: {yaw: 0.23877339499405834, pitch: -0.04818224166542251} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo3',
@@ -296,7 +296,7 @@
   { nodeId: 'nodo2', position: {yaw: 5.438350895286475, pitch: -0.16265067615345696} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo4',
@@ -309,7 +309,7 @@
   { nodeId: 'nodo5', position: {yaw: 1.459868293369931, pitch: -0.40979389064260374} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo5',
@@ -324,7 +324,7 @@
 
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo6',
@@ -339,7 +339,7 @@
 
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo7',
@@ -354,7 +354,7 @@
 
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo8',
@@ -368,7 +368,7 @@
   
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo10',
@@ -393,7 +393,7 @@
   { nodeId: 'nodo12', position: {yaw: 6.252887722137514, pitch: -0.2447056657187261} },
   { nodeId: 'nodo10', position: {yaw: 1.5650480279243357, pitch: -0.13421418844120003} },
   { nodeId: 'nodo7', position: {yaw: 3.0335209191812083, pitch: -0.0007119437749794066} }],
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg', tilt: '-5deg' },
         },
         {
           id: 'nodo12',
@@ -403,7 +403,7 @@
           caption: 'Segundo Piso a WorldFitness',
           links: [
   { nodeId: 'nodo11', position: {yaw: 1.5650480279243357, pitch: -0.13421418844120003} }],
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg', tilt: '-5deg' },
         }
       ],
       2:[
@@ -423,7 +423,7 @@
             position: {yaw: 3.069531230288529, pitch: -0.0630687208682561}
           },
         ],
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo16',
@@ -437,7 +437,7 @@
   { nodeId: 'nodo18', position: {yaw: 1.9406549960366353, pitch: -0.17760224799501856} }
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo17',
@@ -456,7 +456,7 @@
 
           },
         ],
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo18',
@@ -469,7 +469,7 @@
   { nodeId: 'nodo19', position: {yaw: 1.4890957049385867, pitch: -0.3430542651568995} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo19',
@@ -495,7 +495,7 @@
   { nodeId: 'nodo22', position: {yaw: 3.2465529258378902, pitch: -0.11698603235681082} }
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo22',
@@ -508,7 +508,7 @@
   { nodeId: 'nodo23', position: {yaw: 3.2465529258378902, pitch: -0.11698603235681082} }
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg', tilt: '-5deg' },
         },
         {
           id: 'nodo23',
@@ -521,7 +521,7 @@
   { nodeId: 'nodo22', position: {yaw: 3.069531230288529, pitch: -0.0630687208682561} }
 ]
 ,
-          sphereCorrection: { pan: '180deg' },
+          sphereCorrection: { pan: '180deg' , tilt: '-5deg'},
         },
         
       ],
@@ -545,7 +545,7 @@
 
           },
         ],
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo25',
@@ -563,7 +563,7 @@
             position: {yaw: 0.8325355687290981, pitch: -0.01014638329005546}
           },
         ],
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg', tilt: '-5deg' },
         },
         {
           id: 'nodo26',
@@ -576,7 +576,7 @@
   { nodeId: 'nodo25', position: {yaw: 2.287577382315449, pitch: 0.006565595278422265} }
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo27',
@@ -590,7 +590,7 @@
   { nodeId: 'nodo30', position: {yaw: 0.7861286687389233, pitch: -0.1614095535813691} }
 ]
 ,
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo28',
@@ -604,7 +604,7 @@
             position: {yaw: 2.5968681199639216, pitch: -0.08871858953845102}
           },
         ],
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg', tilt: '-5deg' },
         },
 
         {
@@ -623,7 +623,7 @@
             position: {yaw: 0.8325355687290981, pitch: -0.01014638329005546}
           },
         ],
-          sphereCorrection: { pan: '0deg' },
+          sphereCorrection: { pan: '0deg' , tilt: '-5deg'},
         },
        
       ],
@@ -642,7 +642,7 @@
   { nodeId: 'nodo34', position: {yaw: 2.502012713753895, pitch: -0.21095465028415283} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo32',
@@ -656,7 +656,7 @@
   { nodeId: 'nodo33', position: {yaw: 0.5234051470169939, pitch: -0.17504062095863882} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo33',
@@ -686,7 +686,7 @@
   { nodeId: 'nodo36', position: {yaw: 0.6110507066036653, pitch: -0.07161433311058918} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg' , tilt: '-5deg'},
         },
         {
           id: 'nodo35',
@@ -712,7 +712,7 @@
   { nodeId: 'nodo33', position: {yaw: 2.641852545205756, pitch: -0.17780351172444808} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg', tilt: '-5deg' },
         },
         {
           id: 'nodo37',
@@ -726,7 +726,7 @@
   { nodeId: 'nodo33', position: {yaw: 5.398965573046856, pitch: -0.0694909828691892} }
 ]
 ,
-          sphereCorrection: { pan: '270deg' },
+          sphereCorrection: { pan: '270deg' , tilt: '-5deg'},
         },
 
       ]
