--- a/index.html
+++ b/index.html
@@ -358,6 +358,17 @@
           panorama: `${baseUrl}6.jpg`,
           thumbnail: `${baseUrl}6.jpg`,
           name: 'Segundo Fitness',
+          markers: [
+    {
+      id: 'marker-image-nodo2',
+      imageLayer: '../mancuerna.png',  // Ruta a tu imagen (puede ser relativa)
+      position: { yaw: 1.5, pitch: 0 },  // Ajusta los valores según donde lo quieras posicionar
+      size: { width: 602, height: 522 },     // Tamaño del marker
+      // anchor y rotation se pueden agregar si es necesario, por ejemplo:
+      // anchor: { x: 0.5, y: 0.5 },
+      // rotation: 45
+    }
+  ],
           caption: 'Segundo Piso a WorldFitness',
           links: [
   { nodeId: 'nodo5', position: {yaw: 4.789801150080213, pitch: -0.20725646929735797}},
