--- a/index.html
+++ b/index.html
@@ -815,7 +815,10 @@
         [
           VisibleRangePlugin,
           {}
-        ]
+        ],
+        [AutorotatePlugin, {
+            autorotatePitch: '5deg',
+        }],
       ]
     });
   
