--- a/index.html
+++ b/index.html
@@ -115,14 +115,7 @@
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WJFVX673"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <div id="flyer-overlay">
-    <div class="flyer-content" onclick="redirectToPromo()">
-      <!-- Botón de cierre -->
-      <button class="close-flyer" onclick="closeFlyer(); event.stopPropagation()">×</button>
-      <!-- Aquí incluye tu flyer. Puedes usar una imagen o el contenido que desees -->
-      <img src="./flyer.jpeg" alt="Flyer Promocional" style="width: 100%; display: block;">
-    </div>
-  </div>
+
   <!-- NAV -->
   <div class="nav-wrapper">
     <div class="container">
@@ -131,14 +124,13 @@
           <i class='bx bx-webcam bx-tada main-color'></i>DÓNDE<span class="main-color"> SERÍA</span>
         </a>
         <ul class="nav-menu" id="nav-menu">
-          <li><a href="https://www.dondeseria.com/index.html">Inicio</a></li>
+          <li><a href="https://www.dondeseria.com/">Inicio</a></li>
           <li><a href="https://www.dondeseria.com/mapa/index.html">Mapa</a></li>
-
-          <li><a href="https://www.dondeseria.com/index.html">Restaurantes</a></li>
-          <li><a href="https://www.dondeseria.com/index.html">Gyms</a></li>
+          <li><a href="https://restaurantes.dondeseria.com/">Restaurantes</a></li>
+          <li><a href="https://gimnasios.dondeseria.com/">Gyms</a></li>
           <li><a href="https://www.dondeseria.com/blogs/index.html">Blogs</a></li>
-          <li><a href="https://www.dondeseria.com/index.html">Contacto</a></li>
-        </ul>
+          <li><a href="https://www.dondeseria.com/contacto.html">Contacto</a></li>
+      </ul>
         <!-- MOBILE MENU TOGGLE -->
         <div class="hamburger-menu" id="hamburger-menu">
           <div class="hamburger"></div>
@@ -358,17 +350,6 @@
           panorama: `${baseUrl}6.jpg`,
           thumbnail: `${baseUrl}6.jpg`,
           name: 'Segundo Fitness',
-          markers: [
-    {
-      id: 'marker-image-nodo2',
-      imageLayer: '../mancuerna.png',  // Ruta a tu imagen (puede ser relativa)
-      position: { yaw: 1.5, pitch: 0 },  // Ajusta los valores según donde lo quieras posicionar
-      size: { width: 602, height: 522 },     // Tamaño del marker
-      // anchor y rotation se pueden agregar si es necesario, por ejemplo:
-      // anchor: { x: 0.5, y: 0.5 },
-      // rotation: 45
-    }
-  ],
           caption: 'Segundo Piso a WorldFitness',
           links: [
   { nodeId: 'nodo5', position: {yaw: 4.789801150080213, pitch: -0.20725646929735797}},
